crates/ferrotype/tests/compile_fail/union_not_supported.rs
//! Test that TypeScript derive fails on union types

use ferro_type::TypeScript;

#[derive(TypeScript)]
union MyUnion {
    i: i32,
    f: f32,
}

fn main() {}
